--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,144 @@
-.App {
+html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
+
+.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }
+
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+.visuallyHidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
+
+.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
+
+body {
+background-color: #835a5a;
+background-image: linear-gradient(315deg, #835a6a 0%, #0d324d 74%);
+
+}
+
+header {
+  background-color:rgb(10, 19, 36);
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h1,a {
+  color: rgb(209, 64, 64);
+  text-decoration: none;
+  transition: 0.7s;
+font-family: 'Monoton', cursive;
+}
+
+h1,a:hover {
+  color: rgb(46, 178, 255);
+}
+
+.noResults {
+  color: white;
+  margin: 0 auto;
+  padding: 50px;
+  font-size: 2rem;
+}
+
+
+h1 {
+  margin: 0 auto;
+  padding: 25px;
+  color: white;
+  font-size: 4rem;
+  letter-spacing: 5px;
+}
+
+form {
+  padding: 10px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+i {
   color: white;
+  font-size: 1.5rem;
+  position: relative;
+  right: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.search {
+  background-color: transparent;
+  border: 0;
+  padding: 1rem 2rem;
+  font-size: 1.5rem;
+  color: white;
+  border-radius: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+input[type=search] {
+  width: 140px;
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+}
+
+input[type=search]:focus {
+  width: 25%;
+  border-bottom: 2px solid rgb(209, 64, 64);
+  outline: 0;
+}
+
+
+
+.movieslist {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1800px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.moviePoster {
+  /* margin: 1rem; */
+  background-color: rgb(70, 110, 143);
+  color: white;
+  margin: 1rem auto;
+  border: 1px solid rgb(43, 61, 82);
+  border-radius: 20px;
+}
+
+.movieInfo {
+  width: 300px;
+}
+
+h2 {
+  text-align: center;
+  font-size: 1.2rem;
+  margin: 0;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+.voteStyle {
+  text-align: center;
+  font-weight: 700;
+  color:yellow;
+}
+
+
+img {
+  max-width: 100%;
+  width: 300px;
+}
+
+button {
+  border: 1px solid black;
+  border-radius: 100px;
+  background-color: rgb(166, 255, 34);
+  position: relative;
+  left: 278px;
+  bottom: 25px;
+  cursor: pointer;
+
+}
+
+
+span {
+    font-size: 2rem;
+    padding: 8px;
+    font-weight: 700;
+
 }
