--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,15 @@ input[type=search]:focus {
   outline: 0;
 }
 
-
+.trendingHeader {
+  color: white;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 55px;
+  padding-bottom: 20px;
+  font-weight: 700;
+  font-size: 1.5rem;
+}
 
 .movieslist {
   display: flex;
