--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,50 @@ h1,a:hover {
   color: rgb(46, 178, 255);
 }
 
+.watchlistArray {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+  justify-content: center;
+  padding: 25px;
+  list-style: none;
+}
+
+.watchlistInput {
+    background-color: transparent;
+  border: 0;
+  padding: 1rem 2rem;
+  font-size: 1.5rem;
+  color: white;
+  border-radius: 25px;
+  width: 420px;
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+}
+
+.watchlistInput:focus {
+  width: 15%;
+  border-bottom: 2px solid rgb(209, 64, 64);
+  outline: 0;
+}
+
+.movieImage {
+  padding: 1rem;
+}
+
+.movieImage img {
+    color: white;
+  margin: 1rem auto;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 20px;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 5px 5px 5px black;
+}
+
+
 .noResults {
   color: white;
   margin: 0 auto;
@@ -103,42 +147,43 @@ input[type=search]:focus {
 
 }
 
-.CollapseInfo {
-    background-color: #777;
-  color: white;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
+.content {
+  font-size: 100px;
+  position: relative;
 }
-
-.active, .collapsible:hover {
-  background-color: #555;
-}
-
-
 
 .moviePoster {
   /* margin: 1rem; */
-  background-color: rgb(70, 110, 143);
   color: white;
   margin: 1rem auto;
-  border: 1px solid rgb(43, 61, 82);
+  border: 1px solid rgb(0, 0, 0);
   border-radius: 20px;
   position: relative;
   overflow: hidden;
+  box-shadow: 5px 5px 5px black;
+}
+
+.key {
+  display: none;
 }
 
 .movieInfo {
+  position: absolute;
+  bottom: 3.7px;
+  left: 0;
+  right: 0;
   width: 300px;
+  padding-top: 1.5rem;
+  transform: translateY(100%);
+  transition: transform 0.4s ease-in-out;
+  overflow: auto;
+  max-height: 100%;
+  background-color: #061825;
 }
 
 h2 {
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   margin: 0;
   }
 
@@ -146,22 +191,18 @@ h2 {
   text-align: center;
   font-weight: 700;
   color:yellow;
+  
 }
 
 .summary {
-  position: absolute;
-  bottom: -16px;
-  left: 0;
-  right: 0;
-  background-color: #061825;
   padding: 1.5rem;
-  transform: translateX(100%);
-  transition: transform 0.4s ease-in-out;
   line-height: 25px;
+  text-align: center;
+
 }
 
-.moviePoster:hover .summary {
-  transform: translateX(0%);
+.moviePoster:hover .movieInfo {
+  transform: translateY(3%);
 }
 
 .moviePoster:hover {
@@ -170,6 +211,8 @@ box-shadow: -3px -3px 30px 5px rgb(69, 100, 172), 3px 3px 30px 5px rgb(197, 44, 
 img {
   max-width: 100%;
   width: 300px;
+  height: 450px;
+
 }
 
 button {
@@ -177,8 +220,7 @@ button {
   border-radius: 100px;
   background-color: rgb(166, 255, 34);
   position: relative;
-  left: 278px;
-  bottom: 25px;
+  left: 125px;
   cursor: pointer;
 
 }
