--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,12 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 
 body {
+width: 100%;
+height: 100%;
+min-height: 100%;
 background-color: #835a5a;
 background-image: linear-gradient(315deg, #835a6a 0%, #0d324d 74%);
+background-attachment: fixed;
 
 }
 
@@ -32,49 +36,6 @@ font-family: 'Monoton', cursive;
 
 h1,a:hover {
   color: rgb(46, 178, 255);
-}
-
-.watchlistArray {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  max-width: 1600px;
-  margin: 0 auto;
-  justify-content: center;
-  padding: 25px;
-  list-style: none;
-}
-
-.watchlistInput {
-    background-color: transparent;
-  border: 0;
-  padding: 1rem 2rem;
-  font-size: 1.5rem;
-  color: white;
-  border-radius: 25px;
-  width: 420px;
-  -webkit-transition: width 0.4s ease-in-out;
-  transition: width 0.4s ease-in-out;
-}
-
-.watchlistInput:focus {
-  width: 15%;
-  border-bottom: 2px solid rgb(209, 64, 64);
-  outline: 0;
-}
-
-.movieImage {
-  padding: 1rem;
-}
-
-.movieImage img {
-    color: white;
-  margin: 1rem auto;
-  border: 1px solid rgb(0, 0, 0);
-  border-radius: 20px;
-  position: relative;
-  overflow: hidden;
-  box-shadow: 5px 5px 5px black;
 }
 
 
@@ -144,6 +105,7 @@ input[type=search]:focus {
   width: 100%;
   max-width: 1600px;
   margin: 0 auto;
+  padding-bottom: 45px;
 
 }
 
@@ -153,7 +115,6 @@ input[type=search]:focus {
 }
 
 .moviePoster {
-  /* margin: 1rem; */
   color: white;
   margin: 1rem auto;
   border: 1px solid rgb(0, 0, 0);
@@ -231,4 +192,50 @@ span {
     padding: 8px;
     font-weight: 700;
 
+}
+
+Footer {
+  width: 100%;
+  height: 50px;
+  font-size: 25px;
+  margin: 0 auto;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  bottom: -250px;
+  position: absolute;
+  background:#0d324d;
+
+}
+
+.socials {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background:#0d324d;
+  
+}
+
+footer ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+
+
+}
+
+ul li {
+  padding: 20px;
+}
+
+li i:hover {
+  color: rgb(209, 64, 64);
+}
+
+.juno {
+  background: black;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  font-size: 20px;
 }
