--- a/src/App.css
+++ b/src/App.css
@@ -124,9 +124,7 @@ input[type=search]:focus {
   box-shadow: 5px 5px 5px black;
 }
 
-.key {
-  display: none;
-}
+
 
 .movieInfo {
   position: absolute;
@@ -142,11 +140,27 @@ input[type=search]:focus {
   background-color: #061825;
 }
 
+.moviePoster:hover .movieInfo {
+  transform: translateY(3%);
+}
+
+.moviePoster:focus .movieInfo {
+  transform: translateY(3%);
+}
+
+.moviePoster:hover {
+box-shadow: -3px -3px 30px 5px rgb(69, 100, 172), 3px 3px 30px 5px rgb(197, 44, 52);
+}
+
 h2 {
   text-align: center;
   font-size: 1.5rem;
   margin: 0;
   }
+
+.key {
+  display: none;
+}
 
 .voteStyle {
   text-align: center;
@@ -162,13 +176,7 @@ h2 {
 
 }
 
-.moviePoster:hover .movieInfo {
-  transform: translateY(3%);
-}
 
-.moviePoster:hover {
-box-shadow: -3px -3px 30px 5px rgb(69, 100, 172), 3px 3px 30px 5px rgb(197, 44, 52);
-}
 img {
   max-width: 100%;
   width: 300px;
