--- a/src/App.css
+++ b/src/App.css
@@ -231,7 +231,7 @@ Footer {
 }
 
 .contact {
-  font-family:'Oleo Script', cursive;
+  font-family: 'Monoton', cursive;
   letter-spacing: 5px;
   font-size: 2.5rem;
 }
@@ -267,4 +267,46 @@ li i:hover {
   height: 100%;
   margin-top: auto;
   font-size: 15px;
+}
+
+@media (max-width: 1280px) {
+  .movieInfo {
+    width: 200px;
+  }
+
+  h2 {
+    font-size: 1.3rem;
+    padding: 1rem;
+  }
+  
+  .summary {
+    padding: 1rem;
+    font-size: 12px;
+  }
+
+  img {
+    max-width: 100%;
+    width: 200px;
+    height: 300px;
+  }
+}
+
+@media (max-width: 768px) {
+  input[type=search]:focus {
+      width: 45%;
+}
+
+}
+
+@media (max-width: 420px) {
+  .movieInfo {
+    width: 100px;
+  }
+
+
+
+  img {
+    width: 100px;
+    height: 150px;
+  }
 }
