--- a/src/App.css
+++ b/src/App.css
@@ -302,4 +302,9 @@ li i:hover {
     input[type=search]:focus {
       width: 75%;
 }
+
+    .description {
+      height: 120px;
+      font-size: 1.2rem;
+    }
 }
