--- a/src/App.css
+++ b/src/App.css
@@ -299,12 +299,17 @@ li i:hover {
 }
 
 @media (max-width: 420px) {
-    input[type=search]:focus {
-      width: 75%;
+h1 {
+  font-size: 3rem;
 }
 
-    .description {
-      height: 120px;
-      font-size: 1.2rem;
-    }
+.description {
+  height: 120px;
+  font-size: 1.2rem;
+  padding: 25px;
+ }
+
+input[type=search]:focus {
+   width: 75%;
+} 
 }
