--- a/src/App.css
+++ b/src/App.css
@@ -222,6 +222,7 @@ span {
 
 Footer {
   width: 100%;
+  height: 25px;
   font-size: 25px;
   color: white;
   text-align: center;
@@ -312,4 +313,21 @@ h1 {
 input[type=search]:focus {
    width: 75%;
 } 
+
+Footer {
+  font-size: 15px;
+}
+
+Footer i {
+  font-size: 15px;
+}
+
+ul li {
+  padding: 10px;
+}
+
+.contact {
+  font-size: 1rem;
+}
+
 }
