--- a/src/App.css
+++ b/src/App.css
@@ -176,22 +176,34 @@ h2 {
   display: none;
 }
 
+.title {
+  font-family: 'Roboto', serif;
+}
+
 .voteStyle {
   text-align: center;
   font-weight: 700;
   color:yellow; 
+    font-family: 'Roboto', sans-serif;
 }
 
 .release {
   text-align: center;
   color:greenyellow;
+    font-family: 'Roboto', sans-serif;
 }
 
 .summary {
   padding: 1.5rem;
   line-height: 25px;
   text-align: center;
+    font-family: 'Roboto', sans-serif;
 
+}
+
+.movieInfo::-webkit-scrollbar {
+  width: 5px;
+  color: white;
 }
 
 
@@ -201,17 +213,6 @@ img {
   height: 450px;
 
 }
-
-button {
-  border: 1px solid black;
-  border-radius: 100px;
-  background-color: rgb(166, 255, 34);
-  position: relative;
-  left: 125px;
-  cursor: pointer;
-
-}
-
 
 span {
     font-size: 2rem;
@@ -232,7 +233,8 @@ Footer {
 }
 
 .contact {
-  font-family: 'Monoton', cursive;
+  font-family: 'Roboto', serif;
+  font-weight: bold;
   letter-spacing: 5px;
   font-size: 2.5rem;
 }
@@ -242,7 +244,7 @@ Footer {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background:#0d324d;
+  background:#041018;
   
 }
 
