--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,4 +1,4 @@
-.watchListButton {
+/* .watchListButton {
 
     color: white;
 }
@@ -8,7 +8,7 @@
     display: inline-block;
     margin: 0 auto;
     display: flex;
-}
+} */
 
 .loading {
 
