--- a/src/Components/MovieDetails.css
+++ b/src/Components/MovieDetails.css
@@ -1,18 +1,37 @@
+@keyframes shrink {
+    0% {
+        background-size: 120%;
+    }
+
+    100% {
+        background-size: 100%;
+    }
+}
+
 .movieDetails {
     display: flex;
     flex-direction: row;
     /* width: 1000px; */
     background-size: contain;
-    width: 100%;
-    max-width: 2500px;
+    max-width: 100%;
+    /* max-width: 2500px; */
     margin: 0 auto;
     background-blend-mode:soft-light;
     background-color: rgba(0, 0, 0, 0.589);
     background-image: linear-gradient(326deg, #a4508b 0%, #5f0a87 74%);
-    background-size: cover;
+    background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
+    animation: shrink 4s ease-in-out;
 
+}
+
+.bannerFadeBottom {
+    height: 7.4rem;
+    background-image: linear-gradient(180deg, transparent, rgb(5, 5, 5), rgb(19, 18, 18));
+    position: relative;
+    bottom: 100px;
+    margin:0 auto;
 }
 
 button {
@@ -139,4 +158,8 @@ button p:hover {
 .runtime {
     margin-left: 100px;
     font-style: italic;
+}
+
+.seasons {
+    margin-left: 75px;
 }
