--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@ html, body {
 width: 100%;
 height: 100%;
 min-height: 100vh;
-background-color: #835a5a;
-background-image: linear-gradient(315deg, #835a6a 0%, #0d324d 74%);
+background-color: #537895;
+background-image: linear-gradient(315deg, #537895 0%, #09203f 74%);
 background-attachment: fixed;
 
 }
@@ -56,9 +56,10 @@ h1 {
   margin: 0 auto;
   text-align: center;
   font-size: 1.6rem;
-  letter-spacing: 1px;
+  letter-spacing: 1.2px;
   color: white;
-  background:#0f2635;
+  background:#0b3049;
+  background-blend-mode: soft-light;
 
 }
 
