--- a/src/App.css
+++ b/src/App.css
@@ -143,6 +143,12 @@ input[type=search]:focus {
   overflow: hidden;
   box-shadow: 5px 5px 5px black;
   margin: 7px;
+  transition: 0.8s ease-in-out;
+}
+
+.moviePoster:hover {
+  transform: scale(1.2);
+  z-index: 1000;
 }
 
 
@@ -155,7 +161,7 @@ input[type=search]:focus {
   width: 300px;
   padding-top: 1.5rem;
   transform: translateY(100%);
-  transition: transform 0.4s ease-in-out;
+  transition: transform 0.8s ease-in-out;
   overflow: auto;
   max-height: 100%;
   background-color: #061825;
@@ -170,7 +176,7 @@ input[type=search]:focus {
 }
 
 .moviePoster:hover {
-box-shadow: -3px -3px 30px 5px rgb(69, 100, 172), 3px 3px 30px 5px rgb(197, 44, 52);
+box-shadow: -3px -3px 30px 5px rgb(8, 12, 20), 3px 3px 15px 5px rgb(15, 3, 4);
 }
 
 h2 {
