--- a/src/Components/MovieDetails.css
+++ b/src/Components/MovieDetails.css
@@ -1,10 +1,10 @@
 @keyframes shrink {
     0% {
-        background-size: 120%;
+        background-size: 100%;
     }
 
     100% {
-        background-size: 100%;
+        background-size: 110%;
     }
 }
 
@@ -19,19 +19,55 @@
     background-blend-mode:soft-light;
     background-color: rgba(0, 0, 0, 0.589);
     background-image: linear-gradient(326deg, #a4508b 0%, #5f0a87 74%);
-    background-size: 100%;
+    background-size: 110%;
     background-repeat: no-repeat;
     background-position: center;
     animation: shrink 4s ease-in-out;
 
 }
 
+.detailTitle, .tagline, .date-runtime, .summary, .voteStyle, .mediaContainer {
+    animation: scroll-fade 2s ease-in-out;
+}
+
+@keyframes scroll-fade {
+    0% {
+        opacity: 0;
+        transform: translateY(230%);
+    }
+    100% {
+        opacit: 1;
+        transform: translateY(0);
+    }
+}
+
+.poster-image {
+    animation: fadeIn 2s ease-in-out;
+}
+
+@keyframes  fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+    
+}
+
+.bannerFadeUp {
+    height: 7.4rem;
+background-image: linear-gradient(360deg, #030608 2%, rgb(10, 19, 36) 100%);
+    position:relative;
+    margin:0 auto;
+}
+
 
 .bannerFadeBottom {
     height: 7.4rem;
-    background-image: linear-gradient(180deg, transparent, rgb(5, 5, 5), rgb(19, 18, 18));
+background-image: linear-gradient(180deg, #0c1520 2%, #2c4a6e 100%);
     position: relative;
-    bottom: 100px;
+    bottom: 115px;
     margin:0 auto;
 }
 
