--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,6 @@ height: 100%;
 min-height: 100vh;
 background-color: #537895;
 background-image: linear-gradient(315deg, #537895 0%, #09203f 74%);
-background-attachment: fixed;
 
 }
 
@@ -307,6 +306,62 @@ li i:hover {
   font-size: 15px;
 }
 
+
+
+@media (max-width: 1920px) {
+
+  /* MAIN PAGE */
+  header {
+    height: 50px;
+  }
+
+  header h1 {
+    margin-top: 20px;
+  }
+
+  .description {
+    display: none;
+  }
+
+  img {
+    width: 170px;
+    height: 250px;
+  }
+
+  .movieInfo {
+    width: 170px;
+  }
+
+  .title {
+    font-size: 1rem;
+  }
+
+  .movieInfo .summary {
+    font-size: 8px;
+    width: 170px;
+    line-height: 15px;
+  }
+
+  .movieslist {
+    max-width: 1080px;
+    margin: 0 auto;
+    justify-content: center;
+  }
+
+  .categories li p {
+    font-size: 12px;
+  }
+
+  .navigation ul li button h2 {
+    font-size: 12px;
+  }
+
+  .bannerFadeBottom {
+    margin-top: 100px;
+  }
+}
+
+
 @media (max-width: 1280px) {
   .movieInfo {
     width: 200px;
@@ -329,12 +384,8 @@ li i:hover {
   }
 }
 
-@media (max-width: 768px) {
-  input[type=search]:focus {
-      width: 45%;
-}
 
-}
+
 
 @media (max-width: 420px) {
 h1 {
