--- a/src/Components/MovieDetails.css
+++ b/src/Components/MovieDetails.css
@@ -26,7 +26,7 @@
 
 }
 
-.detailTitle, .tagline, .date-runtime, .summary, .voteStyle, .mediaContainer {
+.detailTitle, .tagline, .date-runtime, .summary, .voteStyle, .mediaContainer, .addButton {
     animation: scroll-fade 2s ease-in-out;
 }
 
@@ -65,7 +65,7 @@ background-image: linear-gradient(360deg, #030608 2%, rgb(10, 19, 36) 100%);
 
 .bannerFadeBottom {
     height: 7.4rem;
-background-image: linear-gradient(180deg, #0c1520 2%, #2c4a6e 100%);
+background-image: linear-gradient(180deg, #0c1520 2%, #396191 100%);
     position: relative;
     bottom: 115px;
     margin:0 auto;
@@ -92,6 +92,11 @@ button p {
 
 button p:hover {
     color: tomato;
+}
+
+.goBack {
+    bottom: 500px;
+    position: relative;
 }
 
 .goBack p {
@@ -134,6 +139,7 @@ button p:hover {
 
 .poster-image {
     padding: 150px;
+    margin-bottom: 100px;
 }
 
 .poster-image img {
