--- a/src/Components/Banner.css
+++ b/src/Components/Banner.css
@@ -13,7 +13,7 @@
 .bannerPoster{
     max-width: 100%;
     width: 100vw;
-    height: 100vh;
+    height: 70vh;
     max-height: 100%;
     background-size: cover;
     background-position: center;
@@ -23,8 +23,8 @@
     background-image: linear-gradient(to top, rgba(0,0,0,0.8) 0, rgba(0,0,0,0) 60%, rgba(0,0,0,0.8) 100%);
     background-size: 110%;
     background-repeat: no-repeat;
-    background-position: center;
-    animation: shrinkFade 4s ease-in-out;
+    background-position: top center;
+    animation: shrinkFade 6s ease-in-out;
     background-position-y: 10%;
     box-shadow: inset 0 0 555px 105px black;
 
