--- a/src/App.css
+++ b/src/App.css
@@ -308,7 +308,7 @@ li i:hover {
 
 
 
-@media (max-width: 1920px) {
+@media (max-width: 1921px) {
 
   /* MAIN PAGE */
   header {
@@ -359,6 +359,12 @@ li i:hover {
   .bannerFadeBottom {
     margin-top: 100px;
   }
+
+.similarWrapper .moviePoster img {
+    width: 250px;
+    height: 50px;
+    
+}
 }
 
 
