--- a/src/Pages/MovieDetails.css
+++ b/src/Pages/MovieDetails.css
@@ -251,3 +251,42 @@ button p:hover {
 .similarTitle {
         width: 750px;
 }
+
+@media (max-width: 1920px) {
+.goBack {
+    bottom: 400px;
+    position: relative;
+}
+
+
+    .poster-image img {
+    width: 100%;
+    height: 600px;
+    max-width: 450px;
+    box-shadow: 10px 10px 15px;
+}
+
+
+
+      .similarWrapper .moviePoster img {
+    width: 300px;
+    height: 180px;
+    
+}
+
+
+    .similarWrapper .moviePoster .movieInfo p,
+    .similarWrapper .moviePoster .movieInfo h2 {
+    width: 275px;
+    
+}
+
+.similarTitle h2 {
+    color: white;
+    text-align: left;
+    position: relative;
+    left: 175px;
+    padding-bottom: 15px;
+}
+
+}
