--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,8 @@ input[type=search]:focus {
   margin: 0 auto;
   padding: 50px;
   font-size: 2rem;
+  z-index: 1;
+  position: relative;
 }
 
 .trendingHeader {
@@ -360,11 +362,7 @@ li i:hover {
     margin-top: 100px;
   }
 
-.similarWrapper .moviePoster img {
-    width: 250px;
-    height: 50px;
-    
-}
+
 }
 
 
