error handling and next/prev pages

--- a/src/Components/HomeContent.css
+++ b/src/Components/HomeContent.css
@@ -35,3 +35,11 @@
    opacity: 1;
    }
 }
+
+.pageButtons {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    bottom: 40px;
+}
