--- a/src/Components/AddToList.css
+++ b/src/Components/AddToList.css
@@ -55,3 +55,16 @@
         transform: translateY(0);
     }
 }
+
+@media (max-width: 1280px) {
+    .AddButton, .AddedButton {
+        width: 150px;
+        position: relative;
+        bottom: 70px;
+    }
+
+    .AddedButton p, .AddButton p {
+        font-size: 10px;
+        padding: 10px;
+    }
+}
