--- a/src/App.css
+++ b/src/App.css
@@ -249,8 +249,9 @@ Footer {
 .contact {
   font-family: 'Roboto', serif;
   font-weight: bold;
-  letter-spacing: 5px;
+  letter-spacing: 2px;
   font-size: 1.5rem;
+  padding-top: 20px;
 }
 
 
@@ -266,6 +267,8 @@ footer ul {
   list-style: none;
   display: flex;
   justify-content: center;
+  padding-left: 0px;
+  margin: 25px;
 
 
 }
@@ -284,6 +287,7 @@ footer ul {
   display: flex;
   justify-content: center;
   margin: 0 auto;
+  padding-left: 0px;
 }
 
 .otherLinks li {
@@ -424,8 +428,9 @@ h1 {
   padding: 25px;
  }
 
- .categories ul li {
-   font-size: 10px;
+ input[type=search] {
+   width: 29%;
+   font-size: 15px;
  }
 
 input[type=search]:focus {
