--- a/src/Components/AddToList.css
+++ b/src/Components/AddToList.css
@@ -68,3 +68,24 @@
         padding: 10px;
     }
 }
+
+@media (max-width: 768px) {
+    .AddButton, .AddedButton {
+        position: relative;
+        right: 330px;
+        bottom: 120px;
+    }
+
+    .AddedButton p , .AddButton p {
+
+    }
+}
+
+@media (max-width: 420px) {
+    .AddButton, .AddedButton {
+        position: relative;
+        right: 0px;
+        left: 90px;
+        bottom: 525px;
+    }
+}
