--- a/src/Components/Banner.css
+++ b/src/Components/Banner.css
@@ -91,14 +91,24 @@ background-image: linear-gradient(180deg, #09203f 0%, #0c1a25 74%);
             background-position-y: 100%;
     }
 
-    @keyframes shrinkFade {
+
+
+}
+
+@media (max-width: 420px) {
+    .bannerPoster {
+        background-position-y: 100%;
+        background-size: 250%;
+    }
+
+        @keyframes shrinkFade {
     0% {
-        background-size: 160%;
-        background-position-y: 50%;
+        background-size: 220%;
+        background-position-y: 80%;
     }
 
     100% {
-        background-size: 180%;
+        background-size: 250%;
         background-position-y: 100%;
     }
 }
