--- a/src/Pages/MovieDetails.css
+++ b/src/Pages/MovieDetails.css
@@ -72,11 +72,15 @@ background-image: linear-gradient(180deg, #0c1520 2%, #396191 100%);
     margin:0 auto;
 }
 
+.addButtonMobile {
+    display: none;
+    padding: 0px;
+}
+
 button {
     background: none;
     outline: none;
     border: none;
-    padding: 25px;
     cursor: pointer;
     transition: 0.5s ease-in-out;
 }
@@ -98,6 +102,7 @@ button p:hover {
 .goBack {
     bottom: 500px;
     position: relative;
+    padding: 20px;
 }
 
 .goBack p {
@@ -398,6 +403,7 @@ background-image: linear-gradient(360deg, #030608 2%, rgb(10, 19, 36) 100%);
     position: relative;
     top: 25px;
     padding-top: 20px;
+    padding-bottom: 50px;
 }
 
 .movieDetails {
@@ -428,6 +434,7 @@ background-image: linear-gradient(360deg, #030608 2%, rgb(10, 19, 36) 100%);
 
 .detailTitle {
     font-size: 25px;
+    line-height: 25px;
 }
 
 .detailsDescription {
@@ -477,7 +484,7 @@ background-image: linear-gradient(360deg, #030608 2%, rgb(10, 19, 36) 100%);
         flex-direction: column;
         background-size: cover;
         background-size: 560%;
-        height: 120vh;
+        height: 160vh;
         max-height: 100%;
     }
 
@@ -500,7 +507,7 @@ background-image: linear-gradient(360deg, #030608 2%, rgb(10, 19, 36) 100%);
     position: relative;
     top: 25px;
     padding-top: 20px;
-    padding-bottom: 45px;
+    padding-bottom: 185px;
 }
 
 .poster-image {
@@ -511,9 +518,10 @@ background-image: linear-gradient(360deg, #030608 2%, rgb(10, 19, 36) 100%);
 }
 
 .poster-image img {
-    width: 220px;
+    padding-top: 20px;
+    width: 290px;
     width: 100%;
-    height: 270px;
+    height: 340px;
 }
 
 .goBack {
@@ -527,6 +535,14 @@ background-image: linear-gradient(360deg, #030608 2%, rgb(10, 19, 36) 100%);
     padding: 10px;
 }
 
+.similarWrapper .moviePoster img {
+    max-width: 375px;
+    width: 375px;
+}
+
+.similarWrapper .moviePoster .movieInfo p, .similarWrapper .moviePoster .movieInfo h2 {
+    width: 338px;
+}
 
 
 
