--- a/src/Pages/MovieDetails.css
+++ b/src/Pages/MovieDetails.css
@@ -483,7 +483,7 @@ background-image: linear-gradient(360deg, #030608 2%, rgb(10, 19, 36) 100%);
         justify-content: center;
         flex-direction: column;
         background-size: cover;
-        background-size: 560%;
+        background-size: 610%;
         height: 160vh;
         max-height: 100%;
     }
@@ -491,11 +491,11 @@ background-image: linear-gradient(360deg, #030608 2%, rgb(10, 19, 36) 100%);
 
 @keyframes shrink {
     0% {
-        background-size: 520%;
+        background-size: 570%;
     }
 
     100% {
-        background-size: 560%;
+        background-size: 610%;
     }
 }
 
@@ -518,7 +518,7 @@ background-image: linear-gradient(360deg, #030608 2%, rgb(10, 19, 36) 100%);
 }
 
 .poster-image img {
-    padding-top: 20px;
+    margin-top: 25px;
     width: 290px;
     width: 100%;
     height: 340px;
