--- a/src/App.css
+++ b/src/App.css
@@ -210,6 +210,7 @@ h2 {
 
 .summary {
   padding: 1.5rem;
+  font-size: 15px;
   line-height: 25px;
   text-align: center;
     font-family: 'Roboto', sans-serif;
